--- a/hybris_1905_mac/hybris_config.properties
+++ b/hybris_1905_mac/hybris_config.properties
@@ -40,3 +40,6 @@ custom_source_code_folder_name=...
 # * Note: Have to include your local.properties and localextensions.xml under this folder
 # it would be linked to hyris project as hybris/config folder. It's in your source code project folder.
 config_source_file_folder_name=...
+
+# Default password for Hybris
+pass_word=nimda
