Fix properties comments issue

--- a/hybris_1905_mac/hybris_config.properties
+++ b/hybris_1905_mac/hybris_config.properties
@@ -16,12 +16,12 @@
 # WeChat: neuxiang
 
 # Date: 2020-03-08
-# Version: 1.0
+# Date: 2020-03-15 Version: 1.1
 
 ################ * Change following path and folder name to your own local path and fodler name* ################
 # The absolute path to work with both hybris and your code, usually create 
 # a new folder. "." means to create hybris project in this shell folder.
-# dev.path=.
+
 dev_project_path=.
 
 # The absolute path of your source code project. Including extensions folder and config folder
