--- a/hybris_1905_mac/hybris_config.properties
+++ b/hybris_1905_mac/hybris_config.properties
@@ -16,7 +16,7 @@
 # WeChat: neuxiang
 
 # Date: 2020-03-08
-# Date: 2020-03-15 Version: 1.1
+# Date: 2020-03-15 Version: 1.2
 
 ################ * Change following path and folder name to your own local path and fodler name* ################
 # The absolute path to work with both hybris and your code, usually create 
@@ -43,3 +43,6 @@ config_source_file_folder_name=...
 
 # Default password for Hybris
 pass_word=nimda
+
+init_config_json_file=init_config.json
+update_config_json_file=update_config.json
