Add java home setting

--- a/hybris_1905_mac/hybris_config.properties
+++ b/hybris_1905_mac/hybris_config.properties
@@ -46,3 +46,6 @@ pass_word=nimda
 
 init_config_json_file=init_config.json
 update_config_json_file=update_config.json
+
+# set JAVA_HOME
+java_home=/Library/Java/JavaVirtualMachines/jdk-11.0.5.jdk/Contents/Home
